rewrite wcyd code

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <h2>What Can You Do</h2>
                 </div>
                 <div class="container">
-                    <div class="raw">
+                    <div class="row">
                         <div class="wcyd-card">
                             <div class="wcyd-body work">
                                 <h3 class="h-can-do">Work</h3>
