--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                 <div class="rooms-header">
                     <h2>Our rooms</h2>
                 </div>
-                <div class="container">
+                <div class="containery">
 
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="row">
                         <div class="col">
                             <div class="card lounge-room">
                                 <div class="damn-image">
@@ -628,7 +628,7 @@
         </div>
     </main>
     
-    <footer class="columss"> 
+    <footer> 
         <div class="footer">
             <h1>FreeSpace</h1>
                 <div class="footer-list">
