--- a/index.html
+++ b/index.html
@@ -646,12 +646,13 @@
             <div class="footer-email">
                 <p class="footer-span">Enter your email and get our latest news.</p><br>
                 <div class="footer-email-button">
-                <input type="text" placeholder="Email*" required><br>
-                <button class="button">Subscribe</button>
+                    <input class="footer-email" id="footeremail" name="email" type="text" placeholder="Email*"><br/> 
+                    <button class="button" name="button" type="submit" onClick="ValidMail();">Subscribe</button>
                 </div>
             </div>
         </div>
     </footer>
+    <script src="js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
