Fix pricing css code

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <div class="container">
                     <div class="row">
                     
-                        <div class="col">
+                        <div class="cal">
                             <div class="card shadow-sm">
                                 <h3>Day Pass</h3>
                                 <div class="pricing-img" >
@@ -361,11 +361,11 @@
                                 <h2>$25</h2>
                                 <small class="text-muted">per day</small>
                                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <span><a href="#Form" class="inv-button">Purchase</a></span>
+                                <button class="inv-button"><a href="#Form" >Purchase</a></button>
                             </div>
                         </div>
 
-                        <div class="col">
+                        <div class="cal">
                             <div class="card shadow-sm">
                                 <h3>Nightly Pass</h3>
                                 <div class="pricing-img" >
@@ -374,11 +374,11 @@
                                 <h2>$15</h2>
                                 <small class="text-muted">per night</small>
                                 <p class="card-text">The Nightly Pass provides full access during our night-time hours. Night access at FreeSpace anti-cafe is fully automated, and so customers will receive a key fob.</p>
-                                <span><a href="#Form" class="inv-button">Purchase</a></span>
+                                <button class="inv-button"><a href="#Form" >Purchase</a></button>
                             </div>
                         </div>
 
-                        <div class="col">
+                        <div class="cal">
                             <div class="card shadow-sm">
                                 <h3>7-Day Pass</h3>
                                 <div class="pricing-img" >
@@ -387,7 +387,7 @@
                                 <h2>$125</h2>
                                 <small class="text-muted">one week</small>
                                 <p class="card-text">With the 7-Day Pass customers can pick and choose which days they want to come in during daily hours. You get full access to the space and equipment for 7 days.</p>
-                                <span><a href="#Form" class="inv-button">Purchase</a></span>
+                                <button class="inv-button"><a href="#Form" >Purchase</a></button>
                             </div>
                         </div>
                     </div>
