--- a/index.html
+++ b/index.html
@@ -509,47 +509,47 @@
 
         <div class="testi">
             <div class= "testi-container">
-            <div class="testi-text">
-                <h2>Testimonials</h2>
-            </div>
-                <div id= "testi-carousel"class="carousel" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="0" class="active testi-button" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="1" class="testi-button"aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="2" class="testi-button"aria-label="Slide 3"></button>
-                    </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class ="testi-img">
-                                    <img src="img/testimonials/alice.png"  alt="Alice">
-                                </div>
-                                <div class="carousel-caption d-none d-md-block">
-                                
-                                    <h3>Alice Grimes</h3>
-                                    <p>I love the concept of the place! Such a great way to awork on team projects. Nice people, cool snacks, great facilities!”</p>
-                                </div>
-                            </div>
+                <div class="testi-text">
+                    <h2>Testimonials</h2>
+                </div>
+                <div id="testi-carousel" class="carousel" data-bs-ride="carousel">
 
-                            <div class="carousel-item">
-                                <div class ="testi-img">
-                                    <img src="img/testimonials/henry.png"  alt="Henry">
-                                </div>
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h3>Henry Walsch</h3>
-                                    <p>"I am impressed by the venue. FreeSpace is a superb place to generate ideas and work on creative projects. I have also attended a couple of interesting events with prominent speakers. Always nice and rewarding."</p>
-                                </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="testi-img">
+                                <img class="testimg" src="img/testimonials/alice.png" alt="Alice">
                             </div>
-
-                            <div class="carousel-item">
-                                <div class ="testi-img"> 
-                                <img src="img/testimonials/bob.png" alt="Bob">
-                                </div>
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h3>Bob Cooper</h3>
-                                    <p>"FreeSpace is somewhat unusual for an office guy like me. Many people, lots of communication, night-time opportunities. The snacks are really neat by the way."</p>
-                                </div>
+                            <div class="testi-body">
+                                <h3>Alice Grimes</h3>
+                                <p>I love the concept of the place! Such a great way to awork on team projects. Nice people, cool snacks, great facilities!”</p>
                             </div>
                         </div>
+
+                        <div class="carousel-item">
+                            <div class="testi-img">
+                                <img class="testimg" src="img/testimonials/henry.png" alt="Henry">
+                            </div>
+                            <div class="testi-body">
+                                <h3>Henry Walsch</h3>
+                                <p>"I am impressed by the venue. FreeSpace is a superb place to generate ideas and work on creative projects. I have also attended a couple of interesting events with prominent speakers. Always nice and rewarding."</p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="testi-img"> 
+                                <img class="testimg" src="img/testimonials/bob.png" alt="Bob">
+                            </div>
+                            <div class="testi-body">
+                                <h3>Bob Cooper</h3>
+                                <p>"FreeSpace is somewhat unusual for an office guy like me. Many people, lots of communication, night-time opportunities. The snacks are really neat by the way."</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="0" class="active testi-button" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="1" class="testi-button" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#testi-carousel" data-bs-slide-to="2" class="testi-button" aria-label="Slide 3"></button>
+                    </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
@@ -560,7 +560,7 @@
                     </button>                  
                 </div>
             </div> 
-          </div>     
+        </div>     
                 
         <div  class="gallery" id="Gallery">
             <div class="gallery-container">
