Fix testimonials css code

--- a/index.html
+++ b/index.html
@@ -473,25 +473,25 @@
                     <div id="partners-carousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="img/partners/melitta.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/melitta.png" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/partners/cafe-magazin.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/cafe-magazin.png" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/partners/jazz.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/jazz.png" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/partners/dell.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/dell.png" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/partners/bassett.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/bassett.png" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/partners/food-stores.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/food-stores.png" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="img/partners/man.svg" class="d-block w-100" alt="...">
+                                <img class="part-img" src="img/partners/man.png" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#partners-carousel" data-bs-slide="prev">
