--- a/index.html
+++ b/index.html
@@ -473,7 +473,9 @@
                     <div id="partners-carousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="part-img" src="img/partners/melitta.png" alt="...">
+                                <div class="part-item">
+                                    <img class="part-img" src="img/partners/melitta.png" alt="...">
+                                </div>
                             </div>
                             <div class="carousel-item">
                                 <img class="part-img" src="img/partners/cafe-magazin.png" alt="...">
