Fix events css code

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <h2>Events calendar</h2>
                 </div>
                 <div class="container">
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="row">
                         <div class="col">
                             <div class="card shadow-sm">
                                 <div class="ev-image">
@@ -429,7 +429,7 @@
                                 <div class="card-body">
                                     <small class="text-muted">Saturday, November 3|</small>
                                     <small class="text-muted">4pm - 8pm</small>
-                                    <h3>Halloween Party</h3>
+                                    <h3>Artist Support Network</h3>
                                     <p class="card-text">Whether you are an Artist, Musician, Manager, Venue Owner, Festival Organiser, Producer, Sound Engineer or just have a serious interest in helping, supporting, or working in the area of original music, then you are invited to join the Artist Support Network collective!</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="button">
