Fix rooms css code

--- a/index.html
+++ b/index.html
@@ -274,18 +274,18 @@
                     <div class="row">
                         <div class="col">
                             <div class="card lounge-room">
-                                <div class="damn-image">
+                                <div class="damn-image part-1">
                                     <img class="rooms" src="img/our-rooms/lounge-room.webp" alt="Lounge">
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body part 2">
                                     <h3 class="h-rooms">Lounge room</h3>
                                     <p class="p-rooms"> Our spacious and light lounge room can accomodate of up to 20 people. Here, you can share your ideas or meet new interesting people.
-                                        <br><br>
-                                        area: 
-                                        <span>50 m²</span>
-                                        <br>
-                                        accommodates: 
-                                        <span>20 people</span></p>
+                                    <br><br>
+                                    area: 
+                                    <span>50 m²</span>
+                                    <br>
+                                    accommodates: 
+                                    <span>20 people</span></p>
                                     <a class="a-rooms" href="">LEARN MORE</a>
                                 </div>
                             </div>
@@ -293,16 +293,16 @@
                         
                         <div class="col">
                             <div class="card meeting-room">
-                                <div class="damn-image">
+                                <div class="damn-image part-2">
                                     <img class="rooms" src="img/our-rooms/meeting-room.webp" alt="Meeting">
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body part-1">
                                     <h3 class="h-rooms">Meeting room</h3>
                                     <p class="p-rooms">A multifunctional meeting room sits 8 people and offers a quiet experience for small groups of people. Here, you can strike a deal or have a job interview.
-                                        <br><br>area: 
-                                        <span>22 m²</span>
-                                        <br>accommodates: 
-                                        <span>8 people</span></p>
+                                    <br><br>area: 
+                                    <span>22 m²</span>
+                                    <br>accommodates: 
+                                    <span>8 people</span></p>
                                     <a class="a-rooms" href="">LEARN MORE</a>
                                 </div>
                             </div>
@@ -310,16 +310,16 @@
 
                         <div class="col">
                             <div class="card coworking-space">
-                                <div class="damn-image">
+                                <div class="damn-image part-1">
                                     <img class="rooms" src="img/our-rooms/coworking-space.webp" alt="Coworking">
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body part-2">
                                     <h3 class="h-rooms">Coworking space</h3>
                                     <p class="p-rooms">We offer a coworking space for smaller groups of people, who need privacy and offline communication.
-                                        <br><br>area: 
-                                        <span>24 m²</span>
-                                        <br>accommodates: 
-                                        <span>8 people</span></p>
+                                    <br><br>area: 
+                                    <span>24 m²</span>
+                                    <br>accommodates: 
+                                    <span>8 people</span></p>
                                     <a class="a-rooms" href="">LEARN MORE</a>
                                 </div>
                             </div>
