--- a/index.html
+++ b/index.html
@@ -590,7 +590,9 @@
                 <h2>Our Location</h2>
                 <div class="loc-parts">
                     <div class="loc-grid">
-                    <div class="map" ><a  href="https://www.google.com.ua/maps/@50.4851493,30.4721233,14z?hl=ru"> Click and go to the map <hr> </a></div>
+                    <div class="map"  >  
+                        <iframe name="map" id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2539.419154239483!2d30.516117515732162!3d50.470540079478134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce144aa352a5%3A0xb11403053a8c95fc!2zQnRzIERvbWlubywg0LLRg9C70LjRhtGPINCd0LjQttC90ZbQuSDQktCw0LssIDUxLCDQmtC40ZfQsiwgMDQwNzE!5e0!3m2!1sru!2sua!4v1635851446924!5m2!1sru!2sua"  frameborder="0"  cellspacing="0" style="border-style:none; width: 100%; height:100%; " loading="lazy"></iframe>
+                    </div>
                     </div>
                     <div class="loc-grid">
                         <h3>FreeSpace</h3>
@@ -660,7 +662,6 @@
             </div>
         </div>
     </footer>
-    <script src="../638-team-r/js/map.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
